@@ -1,43 +1,46 @@
-package com.terraforming.ares.cards.green;
+package com.terraforming.ares.cards.red;
 
 import com.terraforming.ares.model.MarsContext;
-import com.terraforming.ares.model.Player;
 import com.terraforming.ares.model.Tag;
 import com.terraforming.ares.model.TurnResponse;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
  * Created by oleksii.nikitin
- * Creation date 29.04.2022
+ * Creation date 08.05.2022
  */
 @RequiredArgsConstructor
 @Getter
-public class GeothermalPower implements BaseExpansionGreenCard {
+public class ConvoyFromEuropa implements BaseExpansionRedCard {
     private final int id;
 
     @Override
     public TurnResponse buildProject(MarsContext marsContext) {
-        Player player = marsContext.getPlayer();
-        player.setHeatIncome(player.getHeatIncome() + 2);
+        marsContext.getTerraformingService().revealOcean(marsContext.getGame(), marsContext.getPlayer());
+
+        for (Integer card : marsContext.getGame().getProjectsDeck().dealCards(1).getCards()) {
+            marsContext.getPlayer().getHand().addCard(card);
+        }
+
         return null;
     }
 
     @Override
     public String description() {
-        return "During the production phase, this produces 2 heat.";
+        return "Draw a Card. Flip an Ocean tile.";
     }
 
     @Override
     public List<Tag> getTags() {
-        return Arrays.asList(Tag.BUILDING, Tag.ENERGY);
+        return List.of(Tag.SPACE, Tag.EVENT);
     }
 
     @Override
     public int getPrice() {
-        return 8;
+        return 14;
     }
+
 }
