@@ -1,4 +1,4 @@
-package com.terraforming.ares.cards.green;
+package com.terraforming.ares.cards.red;
 
 import com.terraforming.ares.model.MarsContext;
 import com.terraforming.ares.model.Player;
@@ -7,37 +7,45 @@ import com.terraforming.ares.model.TurnResponse;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
  * Created by oleksii.nikitin
- * Creation date 29.04.2022
+ * Creation date 08.05.2022
  */
 @RequiredArgsConstructor
 @Getter
-public class GeothermalPower implements BaseExpansionGreenCard {
+public class InvestmentLoan implements BaseExpansionRedCard {
     private final int id;
 
     @Override
     public TurnResponse buildProject(MarsContext marsContext) {
         Player player = marsContext.getPlayer();
-        player.setHeatIncome(player.getHeatIncome() + 2);
+
+        player.setTerraformingRating(player.getTerraformingRating() - 1);
+        player.setMc(player.getMc() + 10);
+
         return null;
     }
 
     @Override
     public String description() {
-        return "During the production phase, this produces 2 heat.";
+        return "Lose 1 TR. Get 10 MC.";
+    }
+
+    @Override
+    public int getWinningPoints() {
+        return 1;
     }
 
     @Override
     public List<Tag> getTags() {
-        return Arrays.asList(Tag.BUILDING, Tag.ENERGY);
+        return List.of(Tag.EARTH, Tag.EVENT);
     }
 
     @Override
     public int getPrice() {
-        return 8;
+        return 1;
     }
+
 }
