@@ -1,43 +1,47 @@
-package com.terraforming.ares.cards.green;
+package com.terraforming.ares.cards.red;
 
 import com.terraforming.ares.model.MarsContext;
-import com.terraforming.ares.model.Player;
 import com.terraforming.ares.model.Tag;
 import com.terraforming.ares.model.TurnResponse;
+import com.terraforming.ares.services.TerraformingService;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
  * Created by oleksii.nikitin
- * Creation date 29.04.2022
+ * Creation date 08.05.2022
  */
 @RequiredArgsConstructor
 @Getter
-public class GeothermalPower implements BaseExpansionGreenCard {
+public class LavaFlows implements BaseExpansionRedCard {
     private final int id;
 
     @Override
     public TurnResponse buildProject(MarsContext marsContext) {
-        Player player = marsContext.getPlayer();
-        player.setHeatIncome(player.getHeatIncome() + 2);
+        TerraformingService terraformingService = marsContext.getTerraformingService();
+
+        for (int i = 0; i < 2; i++) {
+            terraformingService.raiseTemperature(marsContext.getGame(), marsContext.getPlayer());
+        }
+
         return null;
     }
 
     @Override
     public String description() {
-        return "During the production phase, this produces 2 heat.";
+        return "Raise the temperature 2 steps.";
     }
 
     @Override
     public List<Tag> getTags() {
-        return Arrays.asList(Tag.BUILDING, Tag.ENERGY);
+        return List.of(Tag.EVENT);
     }
 
     @Override
     public int getPrice() {
-        return 8;
+        return 17;
     }
+
 }
