@@ -1,4 +1,4 @@
-package com.terraforming.ares.cards.green;
+package com.terraforming.ares.cards.red;
 
 import com.terraforming.ares.model.MarsContext;
 import com.terraforming.ares.model.Player;
@@ -7,37 +7,39 @@ import com.terraforming.ares.model.TurnResponse;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
  * Created by oleksii.nikitin
- * Creation date 29.04.2022
+ * Creation date 08.05.2022
  */
 @RequiredArgsConstructor
 @Getter
-public class GeothermalPower implements BaseExpansionGreenCard {
+public class SpecialDesign implements BaseExpansionRedCard {
     private final int id;
 
     @Override
     public TurnResponse buildProject(MarsContext marsContext) {
         Player player = marsContext.getPlayer();
-        player.setHeatIncome(player.getHeatIncome() + 2);
+        player.setBuiltSpecialDesignLastTurn(true);
+        player.setCanBuildInSecondPhase(player.getCanBuildInSecondPhase() + 1);
         return null;
     }
 
     @Override
     public String description() {
-        return "During the production phase, this produces 2 heat.";
+        return "You may play an additional blue or red card this phase." +
+                "For the next card you play this phase, you may consider the oxygen or temperature one color higher or lower.";
     }
 
     @Override
     public List<Tag> getTags() {
-        return Arrays.asList(Tag.BUILDING, Tag.ENERGY);
+        return List.of(Tag.EVENT);
     }
 
     @Override
     public int getPrice() {
-        return 8;
+        return 3;
     }
+
 }
